# vistaai

./: .env.prod.example  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.agents/skills/: fastapi
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/alembic/versions/: 2026-05-01_init.py
backend/app/: __init__.py  admin.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/v1/: __init__.py  agent.py  conversations.py  ws.py
backend/app/core/: cache.py  config.py
backend/app/db/models/: __init__.py
backend/app/repositories/: __init__.py  session.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/app/worker/: celery_app.py
backend/cli/: commands.py
backend/tests/: test_core.py  test_worker.py
docs/: adding_features.md  patterns.md
kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
