[project]
name = "vistaai"
version = "0.1.0"
description = "vistaai"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "chandan0000", email = "kumarchandan41u@gmail.com" }]

dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "pydantic[email]>=2.13.3",
    "pydantic-settings>=2.14.0",
    "orjson>=3.11.8",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "alembic>=1.18.4",
    "greenlet>=3.5.0",
    "pyjwt>=2.12.1",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.27",
    "authlib>=1.7.0",
    "httpx>=0.28.1",
    "redis>=6.4.0",
    "fastapi-cache2>=0.2.2",
    "slowapi>=0.1.9",
    "fastapi-pagination>=0.15.12",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "sqladmin>=0.25.0",
    "itsdangerous>=2.2.0",
    "celery[redis]>=5.6.3",
    "flower>=2.0.1",
    "boto3>=1.43.0",
    "pydantic-ai>=1.88.0",
    "httpx>=0.28.1",
    "click>=8.3.3",
    "tabulate>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "anyio[trio]>=4.13.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "ruff>=0.15.12",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
]

[project.scripts]
vistaai = "cli.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "cli"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.fastapi-fullstack]
generator_version = "0.1.18"
generated_at = "2026-04-28T17:35:08.250613+00:00"

[dependency-groups]
dev = [
    "types-redis>=4.6.0.20241004",
]
